cargo-orthohelp/tests/golden/snapshots/golden_tests__golden__nested_subcommand_snapshots__nested_powershell_about.snap
---
source: cargo-orthohelp/tests/golden/nested_subcommand_snapshots.rs
expression: "read_text(&module_root, \"en-US/about_NestedFixture.help.txt\")"
---
TOPIC
    about_NestedFixture

SHORT DESCRIPTION
    Nested fixture command tree.

LONG DESCRIPTION
    Nested fixture command tree.
