cargo-orthohelp/tests/golden/snapshots/golden_tests__golden__nested_subcommand_snapshots__nested_roff_split_fixture_1.snap
---
source: cargo-orthohelp/tests/golden/nested_subcommand_snapshots.rs
expression: content
---
.TH "FIXTURE" "1" "2026-06-04" "cargo-orthohelp 0.8.0" "Fixture Manual"
.SH NAME
fixture \- Nested fixture command tree.
.SH SYNOPSIS
.B fixture
\fB\-\-global\fR \fIGLOBAL\fR
.SH DESCRIPTION
Nested fixture command tree.
.SH OPTIONS
.TP
\fB\-\-global\fR \fIGLOBAL\fR
Global configuration value.
.SH ENVIRONMENT
.TP
\fBNESTED_APP_GLOBAL\fR
Global configuration value. Equivalent to \fB\--global\fR.
.SH SEE ALSO
.BR fixture-greet (1),
.BR fixture-version (1),
.BR fixture-admin (1),
.SH EXIT STATUS
.TP
\fB0\fR
Successful execution.
.TP
\fB1\fR
General errors.
