cargo-orthohelp/tests/golden/snapshots/golden_tests__golden__nested_subcommand_snapshots__nested_roff_split_fixture_greet_1.snap
---
source: cargo-orthohelp/tests/golden/nested_subcommand_snapshots.rs
expression: content
---
.TH "FIXTURE-GREET" "1" "2026-06-04" "cargo-orthohelp 0.8.0" "Fixture Manual"
.SH NAME
fixture-greet \- Greets a named recipient.
.SH SYNOPSIS
.B fixture-greet
[\fB\-\-excited\fR\fI[=BOOL]\fR]
[\fB\-\-recipient\fR \fIRECIPIENT\fR]
.SH DESCRIPTION
Greets a named recipient.
.SH OPTIONS
.TP
\fB\-\-excited\fR\fI[=BOOL]\fR
Adds an exclamation mark to the greeting.
.br
Possible values: \fItrue, false\fR
.TP
\fB\-\-recipient\fR \fIRECIPIENT\fR
Recipient to greet.
.br
Default: \fBWorld\fR
.SH ENVIRONMENT
.TP
\fBNESTED_APP_RECIPIENT\fR
Recipient to greet. Equivalent to \fB\--recipient\fR.
.SH EXAMPLES
.TP
\fBGreet Ada\fR
.nf
fixture greet --recipient Ada
.fi
Prints a greeting for Ada.
.SH EXIT STATUS
.TP
\fB0\fR
Successful execution.
.TP
\fB1\fR
General errors.
